# lingo

./: .tool-versions  pyproject.toml  test1.ipynb
.brev/: setup.sh
