[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.22.0",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "tas", email = "me@tas.sh"},
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.28.1",
    "sentence-transformers>=2.2.2",
]
requires-python = ">=3.9"
license = {text = "MPL-2.0"}
