[tool.poetry]
name = "lingo"
version = "0.1.0"
description = ""
authors = ["tas <me@tas.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
transformers = "^4.28.1"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
